[project]
name = "act-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudevents>=1.12.0",
    "functions-framework>=3.8.3",
    "google-cloud-logging>=3.12.1",
    "google-cloud-pubsub>=2.31.1",
    "google-cloud-storage>=3.4.1",
    "opencv-python>=4.12.0.88",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.14.0",
]


[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
force_alphabetical_sort_within_sections = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
pretty = true
